--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ span{
 header{
     width: 100%;
     height: 250px;
-    box-shadow: 0 2px 8px rgba(20,23,28,.15);
+    box-shadow: 0 2px 8px 2px rgba(20,23,28,.15);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     position: relative;
@@ -72,7 +72,7 @@ section{
     background-color: white;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    box-shadow: 0 2px 8px rgba(20,23,28,.15);
+    box-shadow: 0 2px 8px 2px rgba(20,23,28,.15);
     margin-top: 15px;
     overflow: auto;
 
@@ -126,14 +126,21 @@ main{
     display: inline-block;
     margin-right: 10px;
     border-radius: 10px;
-    box-shadow: 0 2px 8px rgba(20,23,28,.15);
+    box-shadow: 0 2px 8px 2px rgba(20,23,28,.15);
+    margin-bottom: 15px;
+
 
 }
 .rsm{
     width: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    transition: opacity 0.8s;
 
+}
+.rsm:hover{
+    opacity: 0.6;
+    
 }
 h5{
     margin: 10px;
@@ -154,12 +161,218 @@ h5{
     text-decoration: none;
     border-radius: 10px;
     margin: 15px;
-
-
-}
-.btnDevam{
     color: white;
+
+
 }
+
 .btnDevam:hover{
     opacity: 0.8;
+}
+footer{
+    width: 100%;
+    height: 75px;
+    background-color: black;
+    color: white;
+    line-height: 75px;
+    text-align: center;
+    box-shadow: 0 2px 8px 2px rgba(20,23,28,.15);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+h1{
+    background-color: black;
+    
+    border-radius: 10px;
+    color: white;
+    text-align: center;
+    line-height: 50px;
+    padding: 10px;
+    letter-spacing: 2px; 
+    box-shadow: 0 2px 8px 2px rgba(20,23,28,.15);
+}
+#hakkimizdaRsm{
+    width: 350px;
+    height: auto;
+    border-radius: 10px;
+    float: left;
+    margin: 25px;
+    margin-bottom: 15px;
+    transition: opacity 0.6s;
+
+    
+
+    
+}
+#hakkimizdaRsm:hover{
+    opacity: 0.8;
+}
+.hakyazi{
+    margin-right: 15px;
+    font-size: 15px;
+    line-height: inherit;
+    text-indent: 40px;
+    text-align: justify;
+}
+.referans{
+    width: 30%;
+    height: 300px;
+    background-color: white;
+    float: left;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 0 2px 8px 2px rgba(20,23,28,.15);
+    transition: opacity 0.3s;
+
+
+    
+}
+.refresim{
+    width: 100%;
+    height: 180px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    
+
+}
+.refbaslik{
+    font-size: 20px;
+    display: inline-block;
+    margin-top: -5px;
+    color: black;
+    text-align: center;
+    height: 45px;
+    line-height: 45px;
+    background-color: #f1f1f1f1;
+    width: 100%;
+    
+
+
+}
+.refdetay{
+    text-align: center;
+
+}
+.referans:hover{
+    opacity: 0.6;
+    
+}
+.galres{
+    width: 20%;
+    height: 150px;
+    border-radius: 5px;
+    opacity: 0.8;
+    margin: 15px;
+    box-shadow: 0 2px 8px 2px rgba(20,23,28,.15);
+    transition: all 0.6s;
+    object-fit: cover;
+
+}
+.galres:hover{
+    opacity: 1;
+    border: 5px solid white;
+    cursor: pointer;
+
+
+
+
+}
+.link{
+    text-decoration: none;
+    
+}
+iframe{
+    width: 98%;
+    height: 350px;
+    margin-left: 8px;
+    box-shadow: 0 2px 8px 2px rgba(20,23,28,.15);
+    border-radius: 10px;
+    margin-top: 10px;
+
+}
+.section1{
+    width: 98%;
+    height: auto;
+    margin: auto;
+    margin-top: 10px;
+    background-color: #f2f2f2f2;
+    padding: 10px;
+
+
+}
+
+.form{
+    width: 49%;
+    float: left;
+    height: 380px;
+    border: 1px solid #d8d8d8;
+    padding: 10px;
+    margin-right: 18px;
+
+}
+
+.col-25{
+    float: left;
+    width: 24%;
+    margin-top: 5px;
+
+    
+    
+
+}
+.col-75{
+    width: 75%;
+    float: left;
+    margin-top: 5px;
+}
+.btn{
+    float: right;
+}
+label{
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+}
+input[type=text],textarea{
+    width: 100%;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 4px;
+
+}
+.row:after{
+    content: "";
+    clear: both;
+    display: block;
+}
+input[type=submit]{
+    background-color: black;
+    padding: 10px;
+    border-radius: 7px;
+    border: none;
+    float: right;
+    color: white;
+    font-size: 10px;
+
+}
+.adres{
+    width: 48%;
+    float: left;
+    height: 380px;
+    border: 1px solid #d8d8d8;
+    padding: 10px;
+    
+
+}
+h2{
+    text-align: center;
+
+
+}
+.span1{
+    display: block;
+    margin: 10px;
+    letter-spacing: 1.5px;
+    font-size: 16px;
+    text-align:center;
+
 }
